@@ -18,6 +18,8 @@
        for details. (Stefan)
 - NEW: Added blame command to context menu of the status list control. (Stefan)
 - NEW: "up" button in the repo browser. (Stefan)
+- NEW: Checkbox to exclude the externals in the Check-For-Modifications
+       dialog. (Stefan)
 - CHG: The bug-ID column width in the log dialog is now limited 
        to 200 pixels. (Stefan)
 - CHG: The right-drag context menu now only shows "Export" if a versioned
